--- a/web_portafolio/web_portafolio.csproj
+++ b/web_portafolio/web_portafolio.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Models\Rol.cs" />
     <Compile Include="Models\ProcessModel.cs" />
     <Compile Include="Models\DocumentModel.cs" />
+    <Compile Include="Models\ListTaskModel.cs" />
     <Compile Include="Models\TaskStatus.cs" />
     <Compile Include="Models\TypeAlert.cs" />
     <Compile Include="Models\TaskModel.cs" />
