--- a/web_portafolio/web_portafolio.csproj
+++ b/web_portafolio/web_portafolio.csproj
@@ -218,6 +218,8 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TemplateController.cs" />
+    <Compile Include="Controllers\ProcessController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -226,6 +228,7 @@
     <Compile Include="Models\Enterprise.cs" />
     <Compile Include="Models\LoginView.cs" />
     <Compile Include="Models\Module.cs" />
+    <Compile Include="Models\Request\CreateProcessRequest.cs" />
     <Compile Include="Models\Request\GetUsersByUnitRequest.cs" />
     <Compile Include="Models\Request\LoginRequest.cs" />
     <Compile Include="Models\Response\BaseResponse.cs" />
@@ -234,6 +237,8 @@
     <Compile Include="Models\DocumentModel.cs" />
     <Compile Include="Models\ListTaskModel.cs" />
     <Compile Include="Models\TaskStatus.cs" />
+    <Compile Include="Models\Template.cs" />
+    <Compile Include="Models\TemplateTask.cs" />
     <Compile Include="Models\TypeAlert.cs" />
     <Compile Include="Models\TaskModel.cs" />
     <Compile Include="Models\Unit.cs" />
@@ -842,7 +847,9 @@
     <Content Include="Content\FileUpload\dist\less\file-upload.less" />
     <Content Include="Content\SelectSearch\css\bootstrap-select.css.map" />
     <Content Include="Content\SelectSearch\js\bootstrap-select.js.map" />
+    <Content Include="JS\TemplateProcess.js" />
     <Content Include="JS\CreateTask.js" />
+    <Content Include="JS\CreateProcess.js" />
     <Content Include="JS\Tasks.js" />
     <Content Include="JS\Utils.js" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -890,6 +897,9 @@
     <None Include="packages.config" />
     <Content Include="Views\Tasks\Index.cshtml" />
     <Content Include="Views\Tasks\Create.cshtml" />
+    <Content Include="Views\Process\Create.cshtml" />
+    <Content Include="Views\Process\Backlog.cshtml" />
+    <Content Include="Views\Template\Create.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
