--- a/web_portafolio/web_portafolio.csproj
+++ b/web_portafolio/web_portafolio.csproj
@@ -226,10 +226,12 @@
     </Compile>
     <Compile Include="Models\ConfigTrafficLight.cs" />
     <Compile Include="Models\Enterprise.cs" />
+    <Compile Include="Models\ListModel\ListProcessModel.cs" />
     <Compile Include="Models\LoginView.cs" />
     <Compile Include="Models\Module.cs" />
     <Compile Include="Models\Request\CreateProcessRequest.cs" />
     <Compile Include="Models\Request\GetUsersByUnitRequest.cs" />
+    <Compile Include="Models\Request\TemplateStartRequest.cs" />
     <Compile Include="Models\Request\LoginRequest.cs" />
     <Compile Include="Models\Response\BaseResponse.cs" />
     <Compile Include="Models\Rol.cs" />
@@ -847,7 +849,9 @@
     <Content Include="Content\FileUpload\dist\less\file-upload.less" />
     <Content Include="Content\SelectSearch\css\bootstrap-select.css.map" />
     <Content Include="Content\SelectSearch\js\bootstrap-select.js.map" />
-    <Content Include="JS\TemplateProcess.js" />
+    <Content Include="JS\Workload.js" />
+    <Content Include="JS\TemplateShow.js" />
+    <Content Include="JS\TemplateCreate.js" />
     <Content Include="JS\CreateTask.js" />
     <Content Include="JS\CreateProcess.js" />
     <Content Include="JS\Tasks.js" />
@@ -900,6 +904,8 @@
     <Content Include="Views\Process\Create.cshtml" />
     <Content Include="Views\Process\Backlog.cshtml" />
     <Content Include="Views\Template\Create.cshtml" />
+    <Content Include="Views\Template\Show.cshtml" />
+    <Content Include="Views\Tasks\Workload.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
