--- a/web_portafolio/Web.config
+++ b/web_portafolio/Web.config
@@ -16,7 +16,7 @@
   </connectionStrings>
   <appSettings>
     <add key="LOCAL_PATH_TEMP" value="/Content/TempFiles/"/>
-    <add key="PUBLIC_PATH_TEMP" value="http://inspeccion.adevcom.cl/Content/TempFiles/"/>
+    <add key="PUBLIC_PATH_TEMP" value="http://localhost:57202/"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
