--- a/web_portafolio/web_portafolio.csproj
+++ b/web_portafolio/web_portafolio.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AlertModel.cs" />
     <Compile Include="Models\ConfigTrafficLight.cs" />
     <Compile Include="Models\Enterprise.cs" />
     <Compile Include="Models\ListModel\ListProcessModel.cs" />
@@ -850,6 +851,7 @@
     <Content Include="Content\SelectSearch\css\bootstrap-select.css.map" />
     <Content Include="Content\SelectSearch\js\bootstrap-select.js.map" />
     <Content Include="JS\Backlog.js" />
+    <Content Include="JS\Rejection.js" />
     <Content Include="JS\Workload.js" />
     <Content Include="JS\TemplateShow.js" />
     <Content Include="JS\TemplateCreate.js" />
@@ -907,6 +909,7 @@
     <Content Include="Views\Template\Create.cshtml" />
     <Content Include="Views\Template\Show.cshtml" />
     <Content Include="Views\Tasks\Workload.cshtml" />
+    <Content Include="Views\Tasks\Rejection.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
